--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -85,7 +85,7 @@ The next day I woke up in a panic, flooding the clean architecture I had written
 However, the design choices I made on a whim at this point did result in several annoying bugs in the finished result. The biggest blunder was that although the objects lived on a grid, I treated collisions (from fireballs or axes) in the continuum using Collision shapes instead of simply checking the grid data. This seemed simpler at the time, and it was, but it undeniably made the game feel less polished due to buggy physics. I suppose you win some, you lose some ¯\\\_(ツ)\_/¯.
 
 ### Creating synergy
-I started off with the dragon and its fireball which were quite simple to implement, its simply a projectile that behaves differently based on the target it hits. For example, it is destroyed when hitting an axe or a wall, but it kills any summon, player or breakable wall standing in its way. Interaction with the skeleton is different however; it gets destroyed if hitting head on, deflect if hitting sideways and kills the skeleton if its facing the wrong way.
+I started off with the dragon and its fireball which were quite simple to implement, its simply a projectile that behaves differently based on the target it hits. For example, it is destroyed when hitting an axe or a wall, but it kills any summon, player or breakable wall standing in its way. Interaction with the skeleton is different however; it gets destroyed if it hits head on, deflected if it hits sideways and kills the skeleton if its facing the other direction.
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/FireBall.mp4" type="video/mp4">
@@ -111,7 +111,7 @@ Perhaps these can then be chained in some manner to create a cascading effect. U
 </video> 
 ---
 
-Emergent gameplay in a puzzle game is a bit hard to get a handle on though since you need to anticipate player solutions in order to avoid cheesing a level with the same trick over and over. In other cases, like the one shown below, the flexibility of interactions simply gives rise to more innovative solutions which is a desirable effect. When a game provides the player with a set of tools and there are intuitive ways that the player wishes to use those tools, it stands to reason that the experience will be enhanced if the game is flexible enough to accomodate such behavior. There does seem to be a balance that must be struck here to make it work in a puzzle game.
+Emergent gameplay in a puzzle game is a bit hard to balance though since you need to anticipate player solutions in order to avoid cheesing a level with the same trick over and over. In other cases, like the one shown below, the flexibility of interactions simply gives rise to more innovative solutions which is a desirable effect. When a game provides the player with a set of tools and there are intuitive ways that the player wishes to use those tools, it stands to reason that the experience will be enhanced if the game is flexible enough to accomodate such behavior. It remains to be seen whether the necessary balance can indeed be struck to make it work in a puzzle game.
 
 ![Alternative](/images/blog/post2/Alternative.png){:width="640" style="display:block;margin: 0 auto;"}
 
@@ -125,7 +125,7 @@ Below is an example of how this translated into an actual level inside the Godot
 
 ![Level Design Final](/images/blog/post2/LevelDesignFinal.png){:width="640" style="display:block;margin: 0 auto;"}
 
-Since the game didn't really come together until the last couple of hours, it was largely unclear as to how it would present a challenge. We knew it would involve placing creatures to clear obstacles, but there had to be some limiting factor that put pressure on the player! We toyed around with a mana system and a cost for playing each summon, or perhaps a timer on each summon that swapped it out with some other card upon timeout. In the end, we simply settled on limiting the number of cards provided instead (a staple choice in puzzle games, and rightfully so as we shall see). This allowed us to gently introduce the mechanics of each summon over the first four levels, thus allowing the player to experiment with them and find out interactions between each other in the last two levels. This worked perfectly, and our only regret is that the game ends just as it gets fun as we ran out of time to make more puzzles. Given the circumstances though, getting this far was still quite an achievement.
+Since the game didn't really come together until the last couple of hours, it was largely unclear as to how it would present a challenge. We knew that it would involve placing creatures to clear obstacles, but there had to be some limiting factor that puts some pressure on the player. We toyed around with a mana system and a cost for playing each summon, or perhaps a timer on each summon that swapped it out with some other card upon timeout. In the end, we simply settled on limiting the number of cards provided per level (a staple choice in puzzle games, and rightfully so as we shall see). This allowed us to gently introduce the mechanics of each summon over the first four levels, followed by giving the player a free reign to explore interactions in the last two levels. As a result, the difficulty ramped up perfectly, leaving us with the only regret that the game ends just as it starts getting fun. Given the circumstances though, getting this far still felt like quite an achievement.
 
 # A nasty surprise
 
@@ -139,7 +139,7 @@ Now that the mechanics were done and levels were implemented, I quickly threw to
 > 
 > res://src/scenes/levels/level_1.tscn 
 
-??? Things were working fine just a second ago, and now I couldn't open any scene in my editor, forget exporting it. I started panicking hard, even though I had been maintaining version control through Git, if I didn't know what was causing this issue, there was nothing stopping it from arising again. I clicked through my other scenes and was greeted by similar errors;
+??? Things were working fine just a second ago, and now I couldn't open any scene in my editor, forget exporting it. I started panicking hard, even though I had been maintaining version control through Git. If I didn't know what was causing this issue, there was nothing stopping it from arising again. In attempt to get to the root of this mystery, I clicked through my other scenes and was greeted by similar errors;
 
 > Error Loading: level_1.tscn
 > 
@@ -163,20 +163,21 @@ Did you catch whats going on? It took me a solid hour at 2am in the morning till
 > 
 > res://src/scenes/levels/game_start.tscn 
 
-Wait a minute.. The game start screen just leads back to a missing dependancy of level 1. What? Turns out this confusion was really due to Godot being rather terse with its errors. The issue was that in my lazyness, I did not bother implementing a dedicated script to handle the loading of levels. Instead, I simply kept a reference to the next level in each level scene and loaded it upon level completion. This would've been fine if I hadn't had the bright idea of adding a "Return to start menu" button along with a reference to the scene in the final game end screen. This inadvertently introduced a **Circular dependancy** and Godot didn't know how to handle that. Luckily, `.tscn` files are stored in plain text and I was able to manually break the loop which let the editor open the scenes again, allowing me to resolve this without any git reverting.
+Wait a minute.. but `game_start.tscn` just leads back to a missing dependancy of `level_1.tscn`. What? It turns out that this confusion was really due to Godot being rather vague with its errors. The issue was that in my lazyness, I did not bother implementing a dedicated script to handle the loading of levels. Instead, I simply kept a reference to the next level in each level scene and loaded it upon level completion. This would've been fine if I hadn't had the bright idea of adding a "return to start menu" button along with a reference to `game_start.tscn` in `game_end.tscn`. This inadvertently introduced a **Circular dependancy** and Godot didn't know how to handle that (nor how to report it in a helpful manner apparently!). Luckily, `.tscn` files are stored in plaintext and I was able to manually break the loop. This then allowed the editor to open the scenes again, and I was able to write a dedicated level handler script that resolved the issue without any git reverting.
 
 # Another one
 
-The nightmares with exporting didn't end there though. In game jams, exporting a web build is one of the most important things to do as most people don't trust downloading unknown executables off the internet. Most game engines support a web build out of the box, and how they do it is frankly a mystery to me and as far as I'm concerned, it is actual black magic. It stands to reason then that it is a wonder that it works at all, much less bug-free. 
+The nightmares with exporting didn't end there though. In game jams, exporting a web build is one of the most important things to do as most people don't trust downloading unknown executables off the internet. Most game engines support a web build out of the box, and how they do it is frankly a actual black magic in my eyes. It stands to reason then that it is a wonder that it works at all, much less bug-free. 
 
 ![Works on my machine though](/images/blog/post2/WorksOnMyMachine.jpg){:width="500" style="display:block;margin: 0 auto;"}
 
-I suppose I jinxed it with this kind of thinking, because the web export was plagued with all kinds of inconsistencies with the debug version. The mouse cursor was gigantic, the graphics were slightly misaligned and most importantly the performance randomly tanked. This resulted in input lag for the player, and worse, the stutters ended up screwing with the physics, breaking entire levels. In extreme cases, the browser started using excessive memory and even ran out of it, resulting in crashes. These issues were wide and varied across different devices and browsers and I had no hope of fixing them. In the end, it turned out fine as it didn't seem too prevalent. However, upon digging into this further, I realized that, at least in part, such behavior was actually expected and well known.
+I suppose I jinxed it with this kind of thinking, because the web export was plagued with all kinds of inconsistencies with the debug version. The mouse cursor was gigantic, the graphics were slightly misaligned and most importantly the performance randomly tanked. This resulted in input lag for the player, and worse, the stutters ended up screwing with the physics frames, breaking entire levels. In extreme cases, the browser started using excessive memory and simply crashed in an unpredictable manner. These issues were wide and varied across different devices and browsers and I had no hope of fixing them with only few hours before the submission deadline. In the end, it turned out alright as it didn't seem too prevalent. However, upon digging into this further, I realized that, at least in part, such behavior was actually [expected and well known](https://github.com/godotengine/godot/issues/74882).
 
-Huh? Well, I used Godot 4.2 for this project, and its relatively new. The thing is, Godot 3.5 had been the gold standard for a _really_ long time, and 4.0 came out last year with a bunch of new features and a sizeable rewrite of the engine internals. This resulted in a buggier albeit feature-rich engine, which is still not recommended for production usage. Specifically in the context of web exports, the Godot developers decided that they wanted to go forward with future-proof web technology for their exports such as [SharedArrayBuffers](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer) and other things I do not understand. However, not all browsers have caught up in supporting these features and thus we are stuck in an odd position where Godot games suffer not because of the engine's limitations but because everyone else haven't caught up yet. Can we really blame Godot here? One could argue that the only way to hasten the process of adopting new technology is by setting an example to begin with.
+Huh? Well, I used Godot 4.2 for this project, and its relatively new. The thing is, Godot 3.5 had been the gold standard for a _really_ long time, and 4.0 came out last year with a bunch of new features and a sizeable rewrite of the engine internals. This resulted in a feature-rich albeit buggier engine, which is still not recommended for usage in production. Specifically in the context of web exports, the Godot developers decided that they wanted to go forward with future-proof web technology for their exports such as [SharedArrayBuffers](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer) and other things I do not understand. However, not all browsers have caught up in supporting these features and thus we are stuck in an odd position where Godot games suffer not simply because of engine limitations but also due to slow adoption of newer web specifications. Can we really blame Godot here? One could argue that the only way to hasten the process of adopting new technology is by setting an example to begin with.
 
 # Player reception and lessons learnt
-With the game built and ready to be shipped, I spent the last day just fixing some minor bugs and adding hints in each level. I had ChatGPT help me with these hints and thought they were hilarious. They tell nothing that the player couldn't have figured out already!
+
+With the game built and ready to be shipped, I spent the last few hours just fixing some minor bugs and adding hints in each level. I had ChatGPT help me with these hints. They tell nothing that the player couldn't have figured out already, and I found that absolutely hilarious.
 
 > "One spider's silk, a lonely tale, add another, watch obstacles pale!"
 
