--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -235,10 +235,25 @@ While the game was overall completed and playable, it was clearly not without it
 
 Given that it is a jam game though, players are quite likely to be forgiving towards such things by virtue of the fact that they are also game developers with equally janky entries. Even so, the fact that the game looks, sounds and feels good to play did tend to make players look past such issues as well. After all, the end goal is to have fun playing and if that comes from leaning a bit towards the _aesthetics_ over _mechanics_, there is nothing necessarily wrong with that (for example, I felt that [this](https://saveslothstudios.itch.io/the-royal-writ) game is a perfect example here).
 
-
 # Final thoughts
 
 Through the highs and lows of this project, I learnt a lot about game design, programming patterns and the intricacies of working in a team. If for some reason you'd like to view the spaghetti I wrote, it is available [here](https://github.com/20akshay00/SummonSquad) in its full glory. Overall, I am quite happy that I got the chance to work with some talented folk and managed to crank out a finished product. 
 
 But the bigger takeaway from this is the realization that when designing a game, I don't simply write code. I craft experiences. Experiences that hinge on human behavior and perception. And I have barely struck the surface for there is so much more to learn :)
 
+## Results (updated on 4th May 2024)
+
+Three weeks after making the game, it was finally time to know where we ranked, based on a somewhat arbitrary and flawed system. In the end, the fact that we were able to submit a playable game within 72 hours is an accomplishment in and of itself. Nevertheless, it is a fitting climax to a fun journey! 
+
+| **Category**   | **Avg. Score** | **Ranking** |
+| -------------- | -------------- | ----------- |
+| **Fun**        | 4.00           | 130/1221    |
+| **Innovation** | 3.91           | 142/1220    |
+| **Theme**      | 4.26           | 129/1209    |
+| **Graphics**   | 4.47           | 92/1074     |
+| **Audio**      | 3.79           | 230/779     |
+| **Humor**      | 3.04           | 573/1048    |
+| **Mood**       | 3.98           | 207/1187    |
+| **Overall**    | 4.10           | 102/1221    |
+
+Better than I could've expected! Breaching the top 100 in graphics is such a well deserved win for Jaylus! I do think the Audio score is a bit biased due to its volume being a bit too low in the game. I feel quite bad about this since I thought Eranan did an excellent job to match the vibe of the game (the web spinning sound is absolute perfection). In any case, for an attempt that felt like it was falling apart midway, I'm quite proud that we got `#102` overall.
